# pykal

./: .gitignore  .readthedocs.yml  CLAUDE.md  LICENSE  README.md  README.rst  REFACTOR_STATUS.md  ROSNODE_ROBUSTNESS.md  add_callback_simulation.py  conf.py  fix_double_escape.py  fix_duplicate_experimentation.py  fix_latex_formatting.py  fix_latex_jupyter.py  fix_latex_proper.py  fix_latex_split.py  pyproject.toml  restructure_crazyflie.py  restructure_turtlebot.py  test_notebooks.py  test_pykal_notebooks.py  test_robot_notebooks.py
.github/workflows/: publish.yml
docs/: ADDING_REFERENCES.md  BIBLIOGRAPHY_GUIDE.md  BIBLIOGRAPHY_NEW_SYSTEM.md  BIBLIOGRAPHY_QUICK_REFERENCE.md  BIBLIOGRAPHY_WORKFLOW.md  DOCUMENTATION_RESTRUCTURE.md  SEARCHABLE_BIBLIOGRAPHY_SETUP.md  USER_CHANGES_SUMMARY.md  generate_bib_metadata.py
docs/source/: algorithm_library.rst  changelog.rst  community_references.bib  conf.py  contributing.rst  cookbook.rst  faq.rst  index.rst  introduction.rst  license.rst  overview.rst  quickstart.rst  quickstart_index.rst  references.bib  roadmap.rst  theory.rst  tutorial.rst  using_citations_example.rst  (+1 more)
examples/: EKF_mass_spring_damper.ipynb  EKF_vanderpol_oscillator.ipynb  OPSKF_free_fall.ipynb  OPSKF_imu_calibration.ipynb  PSKF_free_fall.ipynb  PSKF_imu_calibration.ipynb  SKF_free_fall.ipynb  index.rst
notebooks/: 10_Creating_your_own_extension_to_the_Kalman_Filter.ipynb  1_Creating_a_Dynamical_System.ipynb  2_The_(Extended)_Kalman_Filter.ipynb  2_The_(Extended)_Kalman_Filter.org  5_The_Observability_of_States.ipynb  5_The_Observability_of_States.org  6_The_Schmidt_Kalman_Filter.ipynb  7_The_Partial_Update_Kalman_Filter.ipynb  9_The_Unscented_Kalman_Filter.ipynb  kalman.ipynb  least_squares_tutorial.ipynb  scratch.py  test.org  toy_dynamics.org  turtlebot_demo.ipynb  turtlebot_kf_ros.ipynb
pykal/: _base_kf.py  base.py  ekf.py  kf.py  observer.py  opskf.py  pskf.py  pytest.ini  skf.py  system.py  ukf.py
pykal_core/: pyproject.toml
pykal_ros/: package.xml  setup.py
pykal_ros/pykal_ros/generate_nodes/: generate_signal_node.py
pykal_ros_ws/: README.rst
(+402 files in other folders)
