<package format="3">
  <name>pykal_ros</name>
  <version>0.1.0</version>
  <description>ROS2 integration for pykal</description>
  <maintainer email="nehalsinghmangat.software@gmail.com">Nehal Singh Mangat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pykal</exec_depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
